--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "pg": "^8.7.3"
   },
   "proxy": "http://localhost:5001"
 }
