--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "owlster",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
@@ -17,9 +18,11 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-openid-connect": "^2.7.2",
     "pg": "^8.7.3"
   },
   "proxy": "http://localhost:5001"
