--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "stylelint-config-recommended": "^7.0.0",
     "tailwindcss": "^3.0.23"
   }
 }
